objects/APTS_Field_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Convert_To__c</fullName>
        <label>Convert To</label>
        <picklist>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Initial_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Source_Field_API__c</fullName>
        <label>Source Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Source_Location__c</fullName>
        <label>Source Location</label>
        <picklist>
            <picklistValues>
                <fullName>ERP Header</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERP Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERP Qualifier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotation Line Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attribute</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Target_Field_API__c</fullName>
        <label>Target Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Mapping</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>APTS_Source_Location__c</columns>
        <columns>APTS_Source_Field_API__c</columns>
        <columns>APTS_Target_Field_API__c</columns>
        <columns>APTS_Convert_To__c</columns>
        <columns>APTS_Initial_Field__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FM-{0000}</displayFormat>
        <label>Field Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>